# multi-doc-multimodal-rag

./: Dockerfile  LICENSE  Makefile  README.md  main.py  pyproject.toml  requirements.txt
app/: api.py  config.py  embeddings.py  llm.py  loaders.py  prompts.py  rag_pipeline.py  retriever.py  splitter.py  vectorstore.py
src/multidoc_rag/: __init__.py  app.py  config.py  embeddings.py  llm.py  loader.py  prompt.py  utils.py  vectorstore.py
tests/: test_cli.py  test_llm.py  test_utils.py
